skeplib/tests/fixtures/sema/invalid/impl_missing_self_param.sk
struct User { id: Int }

impl User {
  fn bad(x: Int) -> Int {
    return x;
  }
}

fn main() -> Int {
  return 0;
}
